force-app/main/default/objects/UserDeactivation__c/UserDeactivation__c.object-meta.xml
<CustomObject>
    <label>User Deactivation</label>
    <nameField>
        <displayFormat>UD-{0}</displayFormat>
        <label>User Deactivation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Deactivations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>