force-app/main/default/objects/UserDeactivation__c/fields/DeactivationDate__c.field-meta.xml
<CustomField>
    <fullName>DeactivationDate__c</fullName>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>