force-app/main/default/objects/UserDeactivation__c/fields/NotificationDate__c.field-meta.xml
<CustomField>
    <fullName>NotificationDate__c</fullName>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>