force-app/main/default/objects/UserDeactivation__c/fields/NumberOfDeactivated__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDeactivated__c</fullName>
    <label>#Deactivated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>