force-app/main/default/objects/UserDeactivation__c/fields/NumberOfNotifications__c.field-meta.xml
<CustomField>
    <fullName>NumberOfNotifications__c</fullName>
    <label>#Notications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>